--- a/dadi/css/style.css
+++ b/dadi/css/style.css
@@ -30,6 +30,11 @@ button {
     color: #fff;
     border: 5px solid red;
     border-radius: 15px;
+    transition: transform .5s;
+}
+
+button:hover {
+    transform: scale(2);
 }
 
 .winner {
